--- a/plan.html
+++ b/plan.html
@@ -13,7 +13,7 @@
 <body>
 <h1>CP1406 - Assignment 1 - Project Plan - CossiePlay</h1>
 <p><strong>Harpreet Singh</strong> ...<br>
-<strong>jc341767</strong> ...</p>
+<strong>jc341767 (10.250.0.7/jc341767/A1/INDEX.HTML)</strong> ...</p>
 <h2>Goals</h2>
 <p> Our website main goal is to increase the revenue of our company and provide more information about our product to internet surfing users. So we can get attract easily more customers 
 and increase company's profit. </p>
@@ -24,6 +24,6 @@ and increase company's profit. </p>
 <h2>Site Flowchart (Structure Diagram)</h2>
 <p><img src="images/CossiePlay Flow-Chart diagram.png" alt="Site Flowchart" > Cossie Play Diagram </p>
 <h2>GitHub Repository</h2>
-<p><a href="http://github.com/...">CossiePlay and https://github.com/harrysinghsaini/CossiePlay</a></p>
+<p>CossiePlay and<a href="http://github.com/..."> https://github.com/harrysinghsaini/CossiePlay</a></p>
 </body>
 </html>
